<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.digitaldreams.portfolioapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="7"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="60dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/my_nanodegree_apps"/>

        <Button
            android:id="@+id/popular_movies"
            android:text="@string/popular_movies"
            android:textColor="@color/text"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="0dp"
            android:background="@color/colorAccent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/stock_hawk"
            android:text="@string/stock_hawk"
            android:textColor="@color/text"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="0dp"
            android:background="@color/colorAccent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/build_it_bigger"
            android:text="@string/build_it_bigger"
            android:textColor="@color/text"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="0dp"
            android:background="@color/colorAccent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/make_your_app_material"
            android:text="@string/make_your_app_material"
            android:textColor="@color/text"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="0dp"
            android:background="@color/colorAccent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/go_ubiquitous"
            android:text="@string/go_ubiquitous"
            android:textColor="@color/text"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="0dp"
            android:background="@color/colorAccent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/capstone"
            android:text="@string/capstone"
            android:textColor="@color/text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorAccent"
            android:layout_weight="1"/>


    </LinearLayout>
</ScrollView>
